- Ability to set the DRMAA queue and override it in the application
  configuration
- A set of absolute paths now accessible to applications via the
  opal.properties. In the past applications only had access to the current
  working directory
- getOutputs() operation now supports recursive listing of output directories
- Bug fixes for:
  - Error message on Dashboard which was never reset
  - Job statistics page checking/unchecking boxes didn't work

Version 2.3.1
- Bug fixes for
  - Uploading of files in for non-mutually exclusive groups on the
    auto-generated forms
  - Ability to copy attachments across different partitions when the
    working directory is being symlinked
  - Opal SOAP filter for typed services
    - Failure of generic Opal command-line client while uploading input files
    - Interoperability with Axis2 MTOM WSDL2Java clients

Version 2.3
  - PBS support, using a modified version of the pbs4java package
  - Added a limit to the Fork job manager for number of jobs that can be
    executed concurrently
  - Support for upload of tarballs for inputs
  - Support for user email as an optional argument
  - Removal of number of CPUs for non-parallel jobs on input form
  - Support for dynamic addiiton for multiple files upload on simple form
  - Modification of jobID to include service name
  - Refreshed look and feel for Opal dashboard
    - update navigation bar layout 
    - enable navigation bar round corners without image files
    - add coyuright to all pages
    - move all documentation liks to one page
    - enable sorted applications list upon first page load
    - move application usage info into a "row expander"
    - add "Help" tooltip for novice users navigation
    - stop page refresh when job is finished. The default refresh rate is set to 30 sec.
    - Add time stamp for page refreshing.
    - enable radio buttons grouping separation. Fixes a bug of not displaying choosen buttons.